[gd_scene load_steps=4 format=3 uid="uid://qtokgpc2ktuf"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_pr4t8"]
[ext_resource type="Texture2D" uid="uid://csx0akd6gp5hp" path="res://Art/PixalatedArt.png" id="2_p02bh"]
[ext_resource type="AudioStream" uid="uid://xgrdvr7mt0d4" path="res://Background Music/8 Bit Adventure By David Renda.wav" id="3_32o0y"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pr4t8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_p02bh")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -46.5
offset_right = 66.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.639999, 0.760001)

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit Game"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_32o0y")
volume_db = -20.0
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
